workspace = { members = ["ch05", "ch06", "ch07", "ch07-1-3", "ch07-2", "ch07-3", "ch08-4-2", "ch0804"] }
[package]
name = "concurrency-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.14"
